CMAKE_MINIMUM_REQUIRED (VERSION 2.4.7 FATAL_ERROR)
project (minimalgatt)

if(COMMAND cmake_policy)
    cmake_policy(SET CMP0003 NEW)
endif(COMMAND cmake_policy)

add_definitions (-Wl,-z,defs)

SET (CMAKE_C_FLAGS "-Wall -Winvalid-pch -ffunction-sections -fdata-sections")
SET (CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -std=c++11")
SET (CMAKE_C_FLAGS_RELEASE "-Wall -Winvalid-pch -ffunction-sections -fdata-sections -ffast-math -DNDEBUG")
SET (CMAKE_CXX_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -std=c++11")

SET (CMAKE_VERBOSE_MAKEFILE off)

include (FindPkgConfig)
pkg_check_modules (BLUEZ REQUIRED "bluez")
INCLUDE_DIRECTORIES (${BLUEZ_INCLUDE_DIRS})
link_directories(${BLUEZ_LIBRARY_DIRS})

pkg_check_modules (NCURSES REQUIRED "ncurses")
INCLUDE_DIRECTORIES (${NCURSES_INCLUDE_DIRS})
link_directories(${NCURSES_LIBRARY_DIRS})

pkg_check_modules (GLIB REQUIRED "glib-2.0")
INCLUDE_DIRECTORIES (${GLIB_INCLUDE_DIRS})
link_directories(${GLIB_LIBRARY_DIRS})

#pkg_check_modules (DBUS REQUIRED "dbus-1")
#INCLUDE_DIRECTORIES (${DBUS_INCLUDE_DIRS})
#link_directories(${DBUS_LIBRARY_DIRS})

INCLUDE_DIRECTORIES ("src/")
LIST (APPEND APP_SOURCES "src/attrib/att.c")
#LIST (APPEND APP_SOURCES "src/attrib/att-database.h")
LIST (APPEND APP_SOURCES "src/attrib/att.h")
LIST (APPEND APP_SOURCES "src/attrib/gatt.c")
LIST (APPEND APP_SOURCES "src/attrib/gatt.h")
LIST (APPEND APP_SOURCES "src/attrib/gattrib.c")
LIST (APPEND APP_SOURCES "src/attrib/gattrib.h")
#LIST (APPEND APP_SOURCES "src/attrib/gatt-service.c")
#LIST (APPEND APP_SOURCES "src/attrib/gatt-service.h")
LIST (APPEND APP_SOURCES "src/attrib/gatttool.c")
LIST (APPEND APP_SOURCES "src/attrib/gatttool.h")
#LIST (APPEND APP_SOURCES "src/attrib/interactive.c")
LIST (APPEND APP_SOURCES "src/attrib/utils.c")

#LIST (APPEND APP_SOURCES "src/lib/bluetooth.h")
##LIST (APPEND APP_SOURCES "src/lib/bluetooth.c")
LIST (APPEND APP_SOURCES "src/lib/uuid.h")
LIST (APPEND APP_SOURCES "src/lib/uuid.c")
#LIST (APPEND APP_SOURCES "src/lib/sdp.h")
##LIST (APPEND APP_SOURCES "src/lib/sdp.c")
#LIST (APPEND APP_SOURCES "src/lib/sdp_lib.h")
#LIST (APPEND APP_SOURCES "src/lib/hci.h")
##LIST (APPEND APP_SOURCES "src/lib/hci.c")
#LIST (APPEND APP_SOURCES "src/lib/hci_lib.h")
#LIST (APPEND APP_SOURCES "src/lib/l2cap.h")

LIST (APPEND APP_SOURCES "src/src/log.h")
LIST (APPEND APP_SOURCES "src/src/log.c")

LIST (APPEND APP_SOURCES "src/src/shared/util.h")
LIST (APPEND APP_SOURCES "src/src/shared/util.c")
LIST (APPEND APP_SOURCES "src/src/shared/crypto.h")
LIST (APPEND APP_SOURCES "src/src/shared/crypto.c")
LIST (APPEND APP_SOURCES "src/src/shared/att-types.h")
LIST (APPEND APP_SOURCES "src/src/shared/att.h")
LIST (APPEND APP_SOURCES "src/src/shared/att.c")
LIST (APPEND APP_SOURCES "src/src/shared/queue.h")
LIST (APPEND APP_SOURCES "src/src/shared/queue.c")
#LIST (APPEND APP_SOURCES "src/src/shared/mainloop.h")
#LIST (APPEND APP_SOURCES "src/src/shared/mainloop.c")
LIST (APPEND APP_SOURCES "src/src/shared/io.h")
LIST (APPEND APP_SOURCES "src/src/shared/io-glib.c")
LIST (APPEND APP_SOURCES "src/src/shared/timeout.h")
LIST (APPEND APP_SOURCES "src/src/shared/timeout-glib.c")

LIST (APPEND APP_SOURCES "src/btio/btio.h")
LIST (APPEND APP_SOURCES "src/btio/btio.c")

#LIST (APPEND APP_SOURCES "src/client/display.h")
#LIST (APPEND APP_SOURCES "src/client/display.c")

add_executable (${PROJECT_NAME} ${APP_SOURCES})
TARGET_LINK_LIBRARIES (${PROJECT_NAME} readline)
TARGET_LINK_LIBRARIES (${PROJECT_NAME} ${GLIB_LIBRARIES})
#TARGET_LINK_LIBRARIES (${PROJECT_NAME} ${DBUS_LIBRARIES})
TARGET_LINK_LIBRARIES (${PROJECT_NAME} ${BLUEZ_LIBRARIES})
TARGET_LINK_LIBRARIES (${PROJECT_NAME} ${NCURSES_LIBRARIES})
#TARGET_LINK_LIBRARIES (${PROJECT_NAME} pthread)
